11/25
	* Corrected Raid's SP cost [Skotlex]
11/23
	* Merged create_arrow_db, item_db, item_violetbox, mob_db and mob_skill_db [Playtester]
	- fixed comments in create arrow db
	- updated healing items and made all cards "card type"
	- raised chance you get an OVB from and OVB
	- official mob stats of X.1 - X.4 mobs
	- official X.3 and X.4 mob skills
11/22
	* Merged GS skill cast times and requirements. All Coin-skills are now
	  usable with any weapon [Skotlex]
11/14
	* Removed inf2 = trap from Firepillar and Spider Web [Skotlex]
	* Wand of Hermod's range from warp has been reduced to 1. [Skotlex]
	* Merged exp, item_db, job_db1, mob_db, mob_skill_db [Playtester]
	- official GS/NJ job exp
	- replaced bAtk with bBaseAtk
	- more official max HP/SP for TK/SG/SL/GS/NJ
	- official X.4 MVP drops
	- Kiel now summons 6 slaves rather than 5
11/09
	* Merged Ground Drift being stackable and placeable on top of others.
	  [Skotlex]
11/06
	* Updated MG_STONECURSE and NPC_PETRIFYATTACK petrifying time to 5 secs.
	  [Skotlex]
11/03
	* Merged exp, item_db, mob_db, mob_skill_db [Playtester]
	- official GS/NJ job exp up to level 50
	- official X.4 drops & drop rates
	- fixed related item names
	- made Aliot only use NPC_Rebirth on dead	
11/01
	* Merged exp, item_db, job_db1, mob_db, mob_skill_db [Playtester]
	- official GS/NJ job exp up to level 48
	- made Ninja Suit and Thief Clothes being equippable by Ninjas
	- updated Ninja weight and HP growth
	- updated some official X.4 drop rates and mob speed
	- added Shinobi Sash drop to Shinobi
	- Constant only explodes on attack state
10/26
	* Merged item_db, mob_db and mob_skill_db [Playtester]
	- updated view ids of some headgears
	- updated stats & skills of Kiel mobs
	- official Muscipular drops
10/20
	* Merged skill_db.txt, skill_require_db.txt, skill_cast_db.txt,
	  skill_castnodex.txt, skill_unit_db.txt (those are mostly NJ skills, but a
	  few GS changes went in as well)
10/18