@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES
 GO INTO TRUNK. IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS
 WELL AS TRUNK.  EVERYTHING ELSE GOES INTO TRUNK
 
+2006/11/27
+	* Corrected the skill animation for Absorb Spirits [Skotlex]
+	* Mob class-changing will fail if the new class is the same as the previous
+	  one. [Skotlex]
 2006/11/25
 	* Merged ST_MOVE_ENABLE skills checking if you could move to the target
 	  cell instead of checking if you could shoot to that cell. [Skotlex]
