@@ -1,3 +1,8 @@
+11/27
+	* Corrected KiriKage's range so it works correctly when used by non-players
+	  or when use weapon's range is used. [Skotlex]
+	* Changed service for you's flags so it affects all players on range.
+	  [Skotlex]
 11/25
 	* Corrected Raid's SP cost [Skotlex]
 11/23
